--- a/style.css
+++ b/style.css
@@ -119,31 +119,56 @@ button {
 .inspiration {
     background-color: #cac6c4;
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    flex: 1 1 700px;
     justify-content: center;
     align-items: center;
-    padding: 100px;
+    flex: 1 1 700px;
+    padding: 50px;
 }
 
 .quote {
-    display: flex;
-    flex-direction: column;
-    flex: 1 1 700px;
-    justify-content: center;
+    font-style: italic;
+    font-weight: 100;
+    font-size: larger;
+    text-align: left;
+    width: 700px;
+
 }
 
 .author {
     font-weight: 900;
-    font-size: large;
+    font-size: x-large;
     text-align: right;
-    margin-right: 100px;
-    display: flex;
-    flex: 1;
 }
 
 .footer {
     background-color: #1b4435;
     color: #ffd1ba;
     text-align: center;
+}
+
+.cta {
+    background-color: #0b6fca;
+    margin: 50px auto;
+    padding: 50px;
+    border-radius: 8px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
+    flex: 1 1 50%;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.left {
+    color: #ffffff;
+    margin: 20px auto;
+}
+
+.button {
+    margin: 20px auto;
+    text-align: center;
+    margin: auto;
+
 }
